# opendumpy

./: .gitignore  .gitmodules  README.md
docs/diagrams/: GameboyCartMemoryMap.drawio  OpenDumpy.drawio
firmware/: CMakeLists.txt  opendumpy.c
firmware/include/: gb.h
firmware/src/: gb.c  gbc.c
kicad/c-rp2350 opendumpy/: custom_rp2350.kicad_pcb  custom_rp2350.kicad_prl  custom_rp2350.kicad_pro  custom_rp2350.kicad_sch  custom_rp2350.rev0.kicad_pcb  opendumpy_v1-0_BOM.csv
kicad/libs/Game-Boy-KiCad-Library-master/: GBA_CartConnector.step
kicad/libs/Game-Boy-KiCad-Library-master/Footprints/: DSL_Cartridge_Reader.kicad_mod
kicad/libs/pcb-edge-connectors.pretty/: 2x30-PCB-Edge-Connector.kicad_mod
